--- a/src/app/component/shared/header/header.component.html
+++ b/src/app/component/shared/header/header.component.html
@@ -7,9 +7,8 @@
         </a>
       </div>
       <ul class="nav-menu" [class.active]="isMenuOpen">
-        <li><a (click)="scrollToSection('home')">Home</a></li>
-        <li><a routerLink="/platform">Platform</a></li>
-        <li><a (click)="scrollToSection('insights')">Insights</a></li>
+        <li><a routerLink="/" (click)="scrollToSection('home')">Home</a></li>
+        <li><a (click)="scrollToSection('improvements')">Insights</a></li>
         <li><a (click)="scrollToSection('roles')">For Your Role</a></li>
         <li><a (click)="scrollToSection('testimonials')">Testimonials</a></li>
         <li><a (click)="scrollToSection('contact')">Contact</a></li>
